--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gl-noise": "^1.6.1",
     "gsap": "^3.11.4",
     "immer": "^9.0.19",
+    "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "maath": "^0.6.0",
     "next": "13.1.6",
