--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.6",
+    "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.56.20",
     "@react-three/fiber": "^8.11.0",
     "@react-three/postprocessing": "^2.15.0",
+    "@use-gesture/react": "^10.3.0",
     "add-zero": "^1.0.0",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
@@ -36,9 +38,8 @@
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
     "three": "^0.149.0",
+    "three-custom-shader-material": "^5.4.0",
     "virtual-scroll": "^2.2.1",
     "yup": "^1.0.0",
     "zustand": "^4.3.2"
