--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
+    "swiper": "^10.3.1",
     "three": "^0.149.0",
     "three-custom-shader-material": "^5.4.0",
     "virtual-scroll": "^2.2.1",
