--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.6",
+    "@react-spring/three": "^9.3.0",
     "@react-three/drei": "^9.56.20",
     "@react-three/fiber": "^8.11.0",
     "@react-three/postprocessing": "^2.15.0",
@@ -34,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.10.1",
+    "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
