Fixed onway styles

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "immer": "^9.0.19",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "maath": "^0.6.0",
     "next": "13.1.6",
     "react": "18.2.0",
