--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
+    "sharp": "^0.32.6",
     "swiper": "^10.3.1",
     "three": "^0.149.0",
     "three-custom-shader-material": "^5.4.0",
