--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
     "lottie-react": "^2.4.0",
     "maath": "^0.6.0",
     "next": "13.1.6",
+    "next-transpile-modules": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.10.1",
+    "react-simple-keyboard": "^3.7.52",
     "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
     "sharp": "^0.32.6",
+    "simple-keyboard-layouts": "^3.3.44",
     "swiper": "^10.3.1",
     "three": "^0.149.0",
     "virtual-scroll": "^2.2.1",
