--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.10.1",
     "react-simple-keyboard": "^3.7.52",
+    "react-speech-recognition": "^3.10.0",
     "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
+    "regenerator-runtime": "^0.14.1",
     "sass": "^1.58.0",
     "sharp": "^0.32.6",
     "simple-keyboard-layouts": "^3.3.44",
